Concerto de erros em js

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <hr>
         </div color=" dark purble">
     </form>
-    <script src='cadastro.js'></script>
+    <script src='./cadastro.js'></script>
 </body>
 
 </html>
