Concerto de erros em index

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <label for="inputZip" class="form-label">CEP</label><br><br>
           <input type="text" class="form-control" id="cep"><br><br>
           <label for="inputAddress" class="form-label">Endereço</label><br><br>
-          <input type="text" class="form-control" id="rua" placeholder="Joaquim Nabuco"><br><br>
+          <input type="text" class="form-control" id="rua"><br><br>
           <label for="inputAddress" class="form-label">Número</label><br><br>
-          <input type="text" class="form-control" id="numero" placeholder="1234"><br><br>
+          <input type="text" class="form-control" id="numero"><br><br>
           <label for="inputAddress2" class="form-label">Bairro</label><br><br>
           <input type="text" class="form-control" id="bairro"><br><br>
           <label for="inputCity" class="form-label">Cidade</label><br><br>
